--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jquery": "^1.9.1",
     "mongojs": "^0.18.2",
     "morgan": "^1.5.2",
-    "path": "^0.11.14"
+    "mysql": "^2.10.2",
+    "path": "^0.11.14",
+    "q": "^1.4.1"
   }
 }
