--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "jquery": "^1.9.1",
+    "lodash": "^4.13.1",
     "mongojs": "^0.18.2",
     "morgan": "^1.5.2",
     "mysql": "^2.10.2",
