--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "q": "^1.4.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.4",
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
   }
 }
